# tensor-processor-sdk-py

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
tensor_processor/: Tpu.py  __init__.py
