[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor_processor"
version = "1.0.0"
authors = [
  { name="Mathew Lazarte", email="michael.edy623@gmail.com" },
]
description = "TPU SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tynevosa/tensor-processor-sdk-py"
Issues = "https://github.com/tynevosa/tensor-processor-sdk-py/issues"